Crash when saving a render with non-fullscreen file editor #46069

Closed
opened 2015-09-10 11:53:04 +02:00 by Sebastian Koenig · 9 comments

System Information
OSX 10.10.5 GTX960

Blender Version
Broken: 2.75.4 1d1b8bb

Short description of error
Blender crashes when you save an image with file editor non fullscreen

Exact steps for others to reproduce the error
Open default scene. Render. Hit F3 to save the image, file browser opens. Hit Shift+Spacebar to go out of fullscreen mode. Hit Enter to save the image --> Crash

**System Information** OSX 10.10.5 GTX960 **Blender Version** Broken: 2.75.4 1d1b8bb **Short description of error** Blender crashes when you save an image with file editor non fullscreen **Exact steps for others to reproduce the error** Open default scene. Render. Hit F3 to save the image, file browser opens. Hit Shift+Spacebar to go out of fullscreen mode. Hit Enter to save the image --> Crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Confirmed.

This seems to be questionable behavior of the "image save-as" operator: after the file is saved, the window manager sets the space back to the previous type
https://developer.blender.org/diffusion/B/browse/master/source/blender/windowmanager/intern/wm_event_system.c$1804

Then the image save-as operator is executed, which contains the assumption that the space is in fact an image space - ignoring the fact that users can change this any way they like while the file editor is open ...
https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_image/image_ops.c$1906

Confirmed. This seems to be questionable behavior of the "image save-as" operator: after the file is saved, the window manager sets the space back to the previous type https://developer.blender.org/diffusion/B/browse/master/source/blender/windowmanager/intern/wm_event_system.c$1804 Then the `image save-as` operator is executed, which contains the *assumption* that the space is in fact an image space - ignoring the fact that users can change this any way they like while the file editor is open ... https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_image/image_ops.c$1906

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note, this is a regression since 2.73 (where it worked).

A way to test, (without crashing). Is to press,

  • Ctrl+S
  • Shift+Space
  • Escape

If escape exists back to the previous space type, this is using the old logic.


Quite a few minor changes where made to the temporary screen recently by @JulianEisel and myself.


Checking on this...

Note, this is a regression since 2.73 (where it worked). A way to test, (without crashing). Is to press, - Ctrl+S - Shift+Space - Escape If escape exists back to the previous space type, this is using the old logic. ---- Quite a few minor changes where made to the temporary screen recently by @JulianEisel and myself. ---- Checking on this...

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Campbell Barton self-assigned this 2015-09-10 18:41:30 +02:00

This issue was referenced by 487705d60a

This issue was referenced by 487705d60a0e0c619b22507d6fcfa765d1fccea0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46069
No description provided.