Fix T46069: Crash when saving a render with non-fullscreen file editor

IMAGE_OT_save_as assumes that active area is an Image Editor and the logic that should return to image editor after saving didn't run after fullscreen was manually exited.